--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,13 +3,14 @@
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_splash">Splash</string>
     <string name="title_activity_access">Access</string>
+
     <string name="verano">Cimitero Monumentale del Verano</string>
     <string name="minerva">Statua della Minerva</string>
-    <string-array name="indiziVerano">
-        <item>Verano1</item>
-        <item>Verano2</item>
-        <item>Verano3</item>
-    </string-array>
+
+    <string name="verano1">Verano1</string>
+    <string name="verano2">Verano2</string>
+    <string name="verano3">Verano3</string>
+
 
 
 </resources>
