--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,11 +6,13 @@
 
     <string name="verano">Cimitero Monumentale del Verano</string>
     <string name="minerva">Statua della Minerva</string>
+    <string name="basilicaSanLorenzo">Basilica di San Lorenzo fuori le mura</string>
+
 
     <string name="verano1">Verano1</string>
     <string name="verano2">Verano2</string>
     <string name="verano3">Verano3</string>
 
-
-
+    <!--  Stringhe del Suggeritore -->
+    <string name="scegliPinPartenza">Scegli il Pin di partenza.</string>
 </resources>
