- Cambio testo suggeritore per "arrivo al Pin Obbiettivo" e "Click sul pin obbiettivo" quando si è vicini. - Definizione di popuo Sfida. - Popolamento risorse nei file string.xml e dimen.xml utili per settare alcuni parametri. -Ordinato un "pochino" il codice di MapsActivity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,8 @@
     <string name="scegliPinPartenza">Scegli il Pin di partenza.</string>
     <string name="arrivaAlPin">Arriva al Pin che hai scelto.</string>
     <string name="menuPrincipaleOpened">Menu principale</string>
+    <string name="cliccaSulPinIlluminato">Premi sul Pin Obbiettivo per accedere alla sfida!</string>
+
 
 
 
